--- a/dataease-plugin-view/pom.xml
+++ b/dataease-plugin-view/pom.xml
@@ -3,9 +3,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>dataease-plugins</artifactId>
+        <artifactId>dataease-extenstion-sdk</artifactId>
         <groupId>io.dataease</groupId>
-        <version>1.8.0</version>
+        <version>1.9.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>io.dataease</groupId>
             <artifactId>dataease-plugin-common</artifactId>
-            <version>1.8.0</version>
+            <version>1.9.0</version>
         </dependency>
     </dependencies>
 
