--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.dataease</groupId>
-    <artifactId>dataease-plugins</artifactId>
+    <artifactId>dataease-extenstion-sdk</artifactId>
     <packaging>pom</packaging>
-    <version>1.8.0</version>
+    <version>1.9.0</version>
     <modules>
         <module>dataease-plugin-common</module>
         <module>dataease-plugin-interface</module>
