--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,12 @@
             <version>5.7.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.1.4</version>
+        </dependency>
+
     </dependencies>
 
     <distributionManagement>
