--- a/dataease-plugin-interface/pom.xml
+++ b/dataease-plugin-interface/pom.xml
@@ -17,6 +17,12 @@
             <artifactId>dataease-plugin-common</artifactId>
             <version>1.12.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.jasig.cas.client</groupId>
+            <artifactId>cas-client-core</artifactId>
+            <version>3.5.0</version>
+        </dependency>
     </dependencies>
 
 
