--- a/dataease-plugin-interface/pom.xml
+++ b/dataease-plugin-interface/pom.xml
@@ -35,6 +35,14 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>dingtalk</artifactId>
+            <version>1.4.26</version>
+        </dependency>
+
+
     </dependencies>
 
 
