feat: 新增后台导出pdf

--- a/dataease-plugin-interface/pom.xml
+++ b/dataease-plugin-interface/pom.xml
@@ -42,6 +42,17 @@
             </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.9</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>3.0.0-alpha3</version>
+        </dependency>
+
 
     </dependencies>
 
