--- a/dataease-plugin-filter/pom.xml
+++ b/dataease-plugin-filter/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>dataease-extension-sdk</artifactId>
         <groupId>io.dataease</groupId>
-        <version>1.18.4</version>
+        <version>${dataease.version}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
