--- a/dataease-plugin-view/pom.xml
+++ b/dataease-plugin-view/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>dataease-extension-sdk</artifactId>
         <groupId>io.dataease</groupId>
-        <version>1.18.4</version>
+        <version>${dataease.version}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>io.dataease</groupId>
             <artifactId>dataease-plugin-common</artifactId>
-            <version>1.18.4</version>
+            <version>${dataease.version}</version>
         </dependency>
     </dependencies>
 
