--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,15 @@
         <dataease.version>1.18.5</dataease.version>
     </properties>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>io.dataease</groupId>
+                <artifactId>dataease-plugin-common</artifactId>
+                <version>${dataease.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
