--- a/dataease-plugin-interface/pom.xml
+++ b/dataease-plugin-interface/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>dataease-extension-sdk</artifactId>
         <groupId>io.dataease</groupId>
-        <version>${dataease.version}</version>
+        <version>1.18.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
