--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>io.dataease</groupId>
     <artifactId>dataease-extension-sdk</artifactId>
     <packaging>pom</packaging>
-    <version>${dataease.version}</version>
+    <version>1.18.5</version>
     <modules>
         <module>dataease-plugin-common</module>
         <module>dataease-plugin-interface</module>
